--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             color: #fff;
             padding: 20px;
             margin: 0;
-            font-size: 2em; /* حجم افتراضي للحاسوب */
+            font-size: 2em; /* Default size for desktop */
         }
         .container {
             display: flex;
@@ -75,7 +75,7 @@
         .book-title {
             font-weight: bold;
             margin: 15px 10px;
-            font-size: 1.5em; /* حجم افتراضي للحاسوب */
+            font-size: 1.5em; /* Default size for desktop */
         }
         .buttons {
             margin: 10px;
@@ -143,10 +143,10 @@
         }
         @media (max-width: 768px) {
             h1 {
-                font-size: 1.5em; /* تكبير العنوان الرئيسي فقط على الهواتف */
+                font-size: 1.5em; /* Smaller size for mobile */
             }
             .book-title {
-                font-size: 1.2em; /* تصغير عناوين الكتب على الهواتف */
+                font-size: 1.2em; /* Slightly smaller for mobile */
             }
         }
     </style>
@@ -157,7 +157,7 @@
     </header>
     <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
-        <!-- إضافة الكتب هنا -->
+        <!-- Add all book elements here as needed -->
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
@@ -166,12 +166,11 @@
                 <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
             </div>
         </div>
-
-        <!-- إضافة باقي الكتب -->
-
+        
+        <!-- Repeat for additional books -->
     </div>
 
-    <!-- أزرار المشاركة في أسفل الصفحة -->
+    <!-- Share buttons section -->
     <div class="share-buttons">
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-x-twitter"></i></a>
@@ -180,7 +179,7 @@
         <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
     </div>
 
-    <!-- معلومات الاتصال -->
+    <!-- Contact info section -->
     <div class="contact-info">
         <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
         <div><i class="fas fa-phone"></i> 0770 606 2778</div>
