--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             color: #fff;
             padding: 20px;
             margin: 0;
-            font-size: 2em; /* Default size for desktop */
         }
         .container {
             display: flex;
@@ -75,7 +74,6 @@
         .book-title {
             font-weight: bold;
             margin: 15px 10px;
-            font-size: 1.5em; /* Default size for desktop */
         }
         .buttons {
             margin: 10px;
@@ -142,11 +140,16 @@
             color: #6c757d;
         }
         @media (max-width: 768px) {
-            h1 {
-                font-size: 1.5em; /* Smaller size for mobile */
+            .contact-info {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
             }
-            .book-title {
-                font-size: 1.2em; /* Slightly smaller for mobile */
+            header img {
+                max-height: 150px;
+            }
+            .book {
+                width: 90%;
             }
         }
     </style>
@@ -157,7 +160,7 @@
     </header>
     <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
-        <!-- Add all book elements here as needed -->
+        <!-- الكتاب 1 -->
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
@@ -166,11 +169,149 @@
                 <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
             </div>
         </div>
-        
-        <!-- Repeat for additional books -->
+
+        <!-- الكتاب 2 -->
+        <div class="book">
+            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الطائفية في نظر الاسلام</div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول العناء.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
     </div>
 
-    <!-- Share buttons section -->
+    <!-- أزرار المشاركة في أسفل الصفحة -->
     <div class="share-buttons">
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-x-twitter"></i></a>
@@ -179,10 +320,10 @@
         <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
     </div>
 
-    <!-- Contact info section -->
+    <!-- معلومات الاتصال -->
     <div class="contact-info">
         <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
-        <div><i class="fas fa-phone"></i> 0770 606 2778</div>
+        <div><i class="fas fa-phone"></i> 2778 606 0770</div>
         <div><i class="fas fa-envelope"></i> alturaath.43@gmail.com</div>
     </div>
 
