--- a/index.html
+++ b/index.html
@@ -139,26 +139,13 @@
         .contact-info i {
             color: #6c757d;
         }
-        .back-to-top {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: rgba(108, 117, 125, 0.8);
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            padding: 15px;
-            font-size: 24px;
-            cursor: pointer;
-            display: none;
-            transition: background-color 0.3s, opacity 0.3s;
-            opacity: 0.8;
-        }
-        .back-to-top:hover {
-            background-color: rgba(90, 98, 104, 0.8);
-            opacity: 1;
-        }
         @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5em; /* تصغير حجم العنوان الرئيسي على الأجهزة المحمولة */
+            }
+            .book-title {
+                font-size: 1.2em; /* تكبير عناوين الكتب على الأجهزة المحمولة */
+            }
             .contact-info {
                 flex-direction: column;
                 align-items: center;
@@ -179,7 +166,7 @@
     </header>
     <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
-        <!-- الكتب -->
+        <!-- الكتاب 1 -->
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
@@ -189,6 +176,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 2 -->
         <div class="book">
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
@@ -198,6 +186,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 3 -->
         <div class="book">
             <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث أوقات الصلاة</div>
@@ -207,6 +196,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 4 -->
         <div class="book">
             <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول التشويه الجسدي</div>
@@ -216,6 +206,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 5 -->
         <div class="book">
             <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول التلقيح الصناعي</div>
@@ -225,6 +216,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 6 -->
         <div class="book">
             <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول الغناء</div>
@@ -234,6 +226,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 7 -->
         <div class="book">
             <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول القصة فقهياً</div>
@@ -243,6 +236,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 8 -->
         <div class="book">
             <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول الكحول</div>
@@ -252,6 +246,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 9 -->
         <div class="book">
             <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول خصائص النبي</div>
@@ -261,6 +256,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 10 -->
         <div class="book">
             <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول قاعدة الإلزام</div>
@@ -270,6 +266,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 11 -->
         <div class="book">
             <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول قراءة القرآن الكريم</div>
@@ -279,6 +276,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 12 -->
         <div class="book">
             <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
             <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
@@ -288,6 +286,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 13 -->
         <div class="book">
             <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
             <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
@@ -297,6 +296,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 14 -->
         <div class="book">
             <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
             <div class="book-title">منة المنان في الدفاع عن القرآن</div>
@@ -306,6 +306,7 @@
             </div>
         </div>
 
+        <!-- الكتاب 15 -->
         <div class="book">
             <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
             <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
@@ -324,11 +325,6 @@
         <a href="https://t.me/share/url?url=https://ayadhost.github.io/Download-books/&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i></a>
         <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
     </div>
-
-    <!-- زر العودة إلى الأعلى -->
-    <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
-        <i class="fas fa-arrow-up"></i>
-    </button>
 
     <!-- معلومات الاتصال -->
     <div class="contact-info">
@@ -351,16 +347,6 @@
 
             books.forEach(book => {
                 observer.observe(book);
-            });
-
-            // إظهار زر العودة إلى الأعلى عند التمرير
-            const backToTopButton = document.querySelector('.back-to-top');
-            window.addEventListener('scroll', function() {
-                if (window.scrollY > 300) {
-                    backToTopButton.style.display = 'block';
-                } else {
-                    backToTopButton.style.display = 'none';
-                }
             });
         });
     </script>
