--- a/index.html
+++ b/index.html
@@ -139,29 +139,32 @@
         .contact-info i {
             color: #6c757d;
         }
-        #back-to-top {
+        .back-to-top {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: rgba(108, 117, 125, 0.7);
+            background-color: rgba(108, 117, 125, 0.8);
             color: #fff;
             border: none;
             border-radius: 50%;
-            padding: 15px;
-            font-size: 20px;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
+            font-size: 20px;
             display: none;
-            transition: opacity 0.3s;
         }
-        #back-to-top:hover {
-            background-color: rgba(108, 117, 125, 0.9);
+        .back-to-top:hover {
+            background-color: rgba(90, 98, 104, 0.8);
         }
         @media (max-width: 768px) {
             h1 {
-                font-size: 1.5em; /* تصغير حجم العنوان الرئيسي على الأجهزة المحمولة */
+                font-size: 1.5em;
             }
             .book-title {
-                font-size: 1.2em; /* تكبير عناوين الكتب على الأجهزة المحمولة */
+                font-size: 1.2em;
             }
             .contact-info {
                 flex-direction: column;
@@ -183,7 +186,7 @@
     </header>
     <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
-        <!-- الكتب -->
+        <!-- إضافة الكتب الخمسة عشر -->
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
@@ -195,7 +198,7 @@
 
         <div class="book">
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">الطائفية في نظر الإسلام</div>
+            <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
                 <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
                 <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
@@ -211,59 +214,166 @@
             </div>
         </div>
 
-        <!-- أضف باقي الكتب هنا بنفس النمط -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
 
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الغناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول الغناء.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول الغناء.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank"><i class="
+            <a href="books/بحث حول خصائص النبي (ص).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
     </div>
 
-    <!-- زر العودة إلى أعلى الصفحة -->
-    <button id="back-to-top"><i class="fas fa-arrow-up"></i></button>
-
-    <!-- أزرار المشاركة في أسفل الصفحة -->
-    <div class="share-buttons">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-x-twitter"></i></a>
-        <a href="https://wa.me/?text=اطلع على هذه الكتب: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://t.me/share/url?url=https://ayadhost.github.io/Download-books/&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-        <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
+    <div class="book">
+        <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول قاعدة الإلزام</div>
+        <div class="buttons">
+            <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/بحث حول قاعدة الإلزام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
     </div>
 
-    <!-- معلومات الاتصال -->
-    <div class="contact-info">
-        <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
-        <div><i class="fas fa-phone"></i> 2778 606 0770</div>
-        <div><i class="fas fa-envelope"></i> alturaath.43@gmail.com</div>
+    <div class="book">
+        <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+        <div class="buttons">
+            <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/بحث حول قراءة القرآن الكريم.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
     </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const books = document.querySelectorAll('.book');
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('visible');
-                        observer.unobserve(entry.target);
-                    }
-                });
-            }, { threshold: 0.1 });
+    <div class="book">
+        <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+        <div class="buttons">
+            <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/فقه الأخلاق (الجزء الأول).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
+    </div>
 
-            books.forEach(book => {
-                observer.observe(book);
-            });
+    <div class="book">
+        <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+        <div class="buttons">
+            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
+    </div>
 
-            // زر العودة إلى أعلى الصفحة
-            const backToTopButton = document.getElementById('back-to-top');
-            window.addEventListener('scroll', () => {
-                if (window.pageYOffset > 300) {
-                    backToTopButton.style.display = 'block';
-                } else {
-                    backToTopButton.style.display = 'none';
+    <div class="book">
+        <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+        <div class="buttons">
+            <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/منة المنان في الدفاع عن القرآن.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
+    </div>
+
+    <div class="book">
+        <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+        <div class="buttons">
+            <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+            <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+        </div>
+    </div>
+</div>
+
+<!-- زر العودة إلى أعلى الصفحة -->
+<button class="back-to-top" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+</button>
+
+<!-- أزرار المشاركة في أسفل الصفحة -->
+<div class="share-buttons">
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://wa.me/?text=اطلع على هذه الكتب: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://t.me/share/url?url=https://ayadhost.github.io/Download-books/&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+    <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
+</div>
+
+<!-- معلومات الاتصال -->
+<div class="contact-info">
+    <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
+    <div><i class="fas fa-phone"></i> 2778 606 0770</div>
+    <div><i class="fas fa-envelope"></i> alturaath.43@gmail.com</div>
+</div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const books = document.querySelectorAll('.book');
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                    observer.unobserve(entry.target);
                 }
             });
+        }, { threshold: 0.1 });
 
-            backToTopButton.addEventListener('click', () => {
-                window.scrollTo({ top: 0, behavior: 'smooth' });
-            });
+        books.forEach(book => {
+            observer.observe(book);
         });
-    </script>
+
+        // إظهار زر العودة إلى أعلى الصفحة عند التمرير
+        const backToTopButton = document.querySelector('.back-to-top');
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 300) {
+                backToTopButton.style.display = 'block';
+            } else {
+                backToTopButton.style.display = 'none';
+            }
+        });
+    });
+
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+</script>
 </body>
 </html>
