--- a/index.html
+++ b/index.html
@@ -143,15 +143,18 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #6c757d;
+            background-color: rgba(108, 117, 125, 0.8);
             color: #fff;
             border: none;
             border-radius: 50%;
-            padding: 15px;
-            font-size: 24px;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
+            font-size: 20px;
             display: none;
-            transition: background-color 0.3s;
         }
         .back-to-top:hover {
             background-color: #5a6268;
