--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <div class="contact-info">
         <div><i class="fas fa-map-marker-alt"></i> النجف الأشرف / حي الحسين/ شارع العكايشي</div>
         <div><i class="fas fa-phone"></i> 2778 606 0770</div>
-        <div><i class="fas fa-envelope"></i> alturaath.43@gmail.com</div>
+        <div><i class="fas fa-envelope"></i> manager@alturaath.com</div>
     </div>
 
     <!-- زر العودة إلى الأعلى -->
